tanzu-application-platform/yaml/ingress.yml
#@ load("@ytt:data", "data")
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: animal-rescue-ingress
  namespace: #@ data.values.workloadNamespace
spec:
  virtualhost:
    fqdn: #@ 'animal-rescue.' + data.values.appDomainName
  routes:
    - conditions:
        - prefix: /
      services:
        - name: animal-rescue-gateway
          port: 80
